--- a/My Map/assets/css/index.css
+++ b/My Map/assets/css/index.css
@@ -1,7 +1,34 @@
+optgroup{
+    font-size:25px;
+}
+
 #map {
-    height: 800px;
+    height: 700px;
 }
 
 #interval_of_distance_set_by_user{
 	width: 5%;
 }
+
+.frame{
+    width:100%;
+    margin-top: 1%;
+    display:flex;
+}
+
+.setting{
+    width:48%;
+    margin: 0 auto;
+    background-color: #F0F0F0;
+    /*border:1px solid red;*/
+}
+
+.log{
+    width:48%;
+    margin: 0 auto;
+    background-color: #F0F0F0;
+    /*border:1px solid blue;*/
+    max-height: 200px;
+    overflow-y: overlay;
+}
+
